Add Groups and fixup a bunch of junk

--- a/admin/views/bots/create.jade
+++ b/admin/views/bots/create.jade
@@ -19,7 +19,7 @@ block content
       .form-group
         label.control-label.col-sm-2 Active
         .col-sm-10
-          input(type='checkbox', name='active', checked=false)
+          input(type='checkbox', name='active', checked=true)
       .form-group
         .col-sm-offset-2.col-sm-10
           button.btn.btn-success(type='submit') Save
