--- a/admin/views/layout.jade
+++ b/admin/views/layout.jade
@@ -3,6 +3,7 @@ include table
 doctype html
 html
   head
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     block css
       link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/normalize.css')
       link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/main.css')
@@ -16,6 +17,8 @@ html
         .container
           a.navbar-brand(href='/') Ping.ms
           ul.nav.navbar-nav
+            li
+              a(href='/groups') Groups
             li
               a(href='/bots') Bots
             li
