--- a/admin/views/staff/list.jade
+++ b/admin/views/staff/list.jade
@@ -27,8 +27,5 @@ block content
               if row.metrics.dateFail
                 div.text-danger= new Date(row.metrics.dateFail).toDateString()
             td
-              if(row.active)
-                span.glyphicon.glyphicon-check
-              else
-                span.glyphicon.glyphicon-remove
+              span.glyphicon.glyphicon-align-center(class='glyphicon-'+(row.active?'ok-circle text-success':'ban-circle text-danger'))
       +tableFooter(page,count)
