--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -1,6 +1,11 @@
 extends ../layout
 block append js
+  script(src='/bower_components/bootstrap-multiselect/js/bootstrap-multiselect.js')
+  script.
+    $(document).ready(function(){$('.multiselect').multiselect()})
   script(src='/js/table.js')
+block append css
+  link(rel='stylesheet', href='/bower_components/bootstrap-multiselect/css/bootstrap-multiselect.css')
 block content
   .container
     h1 #{bot.location}
@@ -22,7 +27,9 @@ block content
       .form-group
         label.control-label.col-sm-2 Groups
         .col-sm-10
-          input.form-control(type='text', name='groups', placeholder='Groups comma separated', value=bot.groups)
+          select.label-primary.multiselect(multiple='multiple', name='groups')
+            each g,i in groups
+              option(value=g.tag, selected=(bot.groups.split(',').indexOf(g.tag) > -1) ) #{g.label}
       .form-group
         label.control-label.col-sm-2 Active
         .col-sm-10.checkbox
