--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -27,7 +27,7 @@ block content
       .form-group
         label.control-label.col-sm-2 Groups
         .col-sm-10
-          select.label-primary.multiselect(multiple='multiple', name='groups')
+          select.multiselect(multiple='multiple', name='groups')
             each g,i in groups
               option(value=g.tag, selected=(bot.groups.split(',').indexOf(g.tag) > -1) ) #{g.label}
       .form-group
