--- a/main/public/css/style.css
+++ b/main/public/css/style.css
@@ -15,10 +15,13 @@ a {
 a:hover {
   text-decoration: none;
 }
-#header, #footer {
+#header, #footer, .site-description, .wrapper {
   width: 650px;
   margin: 0 auto 10px;
   overflow: hidden;
+}
+#header {
+  margin-bottom: 0;
 }
 #footer div {
   padding: 5px;
@@ -32,6 +35,11 @@ a:hover {
 #logo {
   width: 50px;
   height: 50px;
+}
+.site-description {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
 }
 .main {
   padding: 15px;
