--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -2,10 +2,12 @@ extends layout
 block content
   +alerts()
   .main
+    p.site-description Free online ping test and traceroute service with multiple locations worldwide
     form(action="/", method="post")
-      .instructions Enter a domain or an ip address, e.g. google.com or 72.14.204.99
+
       input.ping(type="text", name="host", size="10", value="")
       select(name="group")
         each row in groups
           option(value=row.name)= row.name
       input(type="submit", value="Ping")
+    .instructions Enter a domain or an ip address, e.g. google.com or 72.14.204.99
