--- a/main/public/css/style.css
+++ b/main/public/css/style.css
@@ -46,8 +46,9 @@ a:hover {
   width: 650px;
   margin: auto;
   border: 1px solid #cbcbcb;
+  border-radius: 10px;
   -moz-border-radius: 10px;
-  -webkit-border-radius:10px;
+  -webkit-border-radius: 10px;
   font-size: 14px;
   background: #333;
   color: #fff;
@@ -66,6 +67,7 @@ input, textarea, select {
   font: 16px arial,helvetica,sans-serif;
   width: 490px;
   color: #999;
+  border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
 }
@@ -75,8 +77,9 @@ input.ping {
   font: 16px arial,helvetica,sans-serif;
   width: 375px;
   color: #999;
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 input[type=submit], input.submit {
   width: auto;
@@ -86,6 +89,7 @@ input[type=submit], input.submit {
   font-weight: bold;
   margin-top: 15px;
   cursor: pointer;
+  border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   padding: 10px;
@@ -97,6 +101,12 @@ input[type=submit]:hover, input[type=submit]:focus, input.submit:hover, input.su
 select {
   width: auto;
 }
-.counter {
+.results {
+  margin-top: 5px;
   padding: 5px;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
 }
