added some bs results from the bots to simulate the frontend

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -22,6 +22,6 @@ block content
             th Min
             th Max
             th Avg
-            th Result
+            th Loss
             th Options
-        tbody
+        tbody#resultBody
