--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -1,26 +1,9 @@
 extends ../layout
 block append js
-  script(src='/js/password-generator.min.js')
-  script(src='/bower_components/bootstrap-multiselect/js/bootstrap-multiselect.js')
-  script.
-    var generateSecret = function(){
-      $("[name='secret']")[0].value = generatePassword(15,false)
-    }
-    $(document).ready(function(){$('.multiselect').multiselect({
-      buttonText: function(options){
-        if(0 === options.length)
-          return '<span class="label label-default">(none)</span> <b class="caret"></b>'
-        else {
-          var selected = ''
-          options.each(function(){
-            var label = ($(this).attr('value') !== undefined) ? $(this).attr('value') : $(this).html()
-            selected += '<span class="label label-primary">' + label + '</span> '
-          })
-          return selected.substr(0, selected.length - 1) + ' <b class="caret"></b>'
-        }
-      }
-    })})
   script(src='/js/table.js')
+  script(src='/bower_components/bootstrap-multiselect/js/bootstrap-multiselect.js')
+  script(src='/js/password-generator.min.js')
+  script(src='/js/bots.js')
 block append css
   link(rel='stylesheet', href='/bower_components/bootstrap-multiselect/css/bootstrap-multiselect.css')
 block content
