Add a reset button to the edit form (so you can reset/save as a way to cancel after whackin the generator button a bunch)

--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -48,3 +48,4 @@ block content
       .form-group
         .col-sm-offset-2.col-sm-10
           button.btn.btn-success(type='submit') Save
+          button.btn.btn-warning(type='reset') Reset
