EVEN SLICKERER OMG!

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -17,6 +17,7 @@ block content
       table.table.table-striped
         thead
           tr
+            th(style='width:1%')
             th Location
             th IP
             th Min
