Minor behavior cleanup (replace pulsar to cancel previous fade)

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -18,6 +18,7 @@ block content
         thead
           tr
             th(style='width:1%')
+              span.glyphicon.glyphicon-link
             th Location
             th IP
             th Min
