--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -13,15 +13,18 @@ html
       link(rel='stylesheet', href='/bower_components/html5-boilerplate/css/main.css')
       link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
       link(rel='stylesheet', href='/css/style.css')
-    link(rel='icon', href='/images/network.png', type='image/png')
-    title #{pageTitle || 'Ping.ms'}
+    link(rel='shortcut icon', href='/favicon.ico', sizes='16x16')
+    link(rel='icon', href='/favicon.ico', sizes='16x16')
+    link(rel='icon', href='/favicon128.ico', sizes='128x128')
+    link(rel='icon', href='/images/pingms-icon.png', sizes='318x317', type='image/png')
+  title #{pageTitle || 'Ping.ms'}
   body
     #header
       #title
         h1
           a(href="/")
-            img#logo(src='/images/network.png')
-            | Ping.ms
+            img#logo(src='/images/pingms-icon.png')
+            |ing.ms
     //main content
     block content
       //footer
