--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -10,7 +10,7 @@ block content
       select#group(name="group")
         each row in groups
           option(value=row.name)= row.name
-      input(type="submit", value="Ping")
+      button.btn.btn-success(type="submit") Ping
     .instructions Enter a domain or an ip address, e.g. google.com or 72.14.204.99
   .wrapper.hidden#results
     .results
