--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -23,8 +23,7 @@ html
       #title
         h1
           a(href="/")
-            img#logo(src='/images/pingms-icon.png')
-            |ing.ms
+            img#logo(src='/images/pingms-logo.png', alt='Ping.ms')
     //main content
     block content
       //footer
