--- a/admin/views/bots/edit.jade
+++ b/admin/views/bots/edit.jade
@@ -38,6 +38,14 @@ block content
             each g,i in groups
               option(value=g.tag, selected=(bot.groups.split(',').indexOf(g.tag) > -1)) #{g.label}
       .form-group
+        label.control-label.col-sm-2 Sponsor Name
+        .col-sm-10
+          input.form-control(type='text', name='sponsorName', value=bot.sponsor.name)
+      .form-group
+        label.control-label.col-sm-2 Sponsor URL
+        .col-sm-10
+          input.form-control(type='text', name='sponsorUrl', value=bot.sponsor.url)
+      .form-group
         label.control-label.col-sm-2 Active
         .col-sm-10.checkbox
           input(type='checkbox', name='active', checked=bot.active)
